2000-02-25  Dan Winship  <danw@helixcode.com>

	* *.c: add gtk-doc-style comments

2000-02-21  Matt Loper  <matt@helixcode.com>

	* .cvsignore: Added mkindex.

2000-02-21  NotZed  <NotZed@HelixCode.com>

	* Makefile.am: change noinst_LIBRARIES to noinst_LTLIBRARIES, and
	supply -static to LDFLAGS.  Duh, and changed LDADD back to
	libibex.la.

2000-02-20  Matt Loper  <matt@helixcode.com>

	* Makefile.am: changed mkindex_LDADD to libibex.a instead of
	libibex.la.

2000-02-19  Matt Loper  <matt@helixcode.com>

	* .cvsignore: added lookup.

2000-02-18  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* Makefile.am (lookup_LDADD): For now. make a libibex.a library so
	we can link it with the camel provider.  I hate libtool

2000-02-16  Dan Winship  <danw@helixcode.com>

	* Makefile.am: automakify

2000-02-16  NotZed  <NotZed@HelixCode.com>

	* find.[ch] (ibex_find_name): Finds if a word is indexed under a
	given name.

2000-02-14  NotZed  <notzed@zedzone.helixcode.com>

	* Makefile: Hack together a build using libtool.  This should all
	be auto*'d at some point I guess.

2000-02-13  NotZed  <notzed@zedzone.helixcode.com>

	* Added ChangeLog file.
